--- a/TurnOffAutoPlay/manifest.json
+++ b/TurnOffAutoPlay/manifest.json
@@ -3,6 +3,10 @@
 	"name" : "TurnOffAutoPlay",
 	"description" : "Turns Youtube autoplay off",
 	"version" : "1.0",
+    "permissions" : [
+          "*://*.youtube.com/*",
+          "management"
+      ],
     "icons" : {
       "16" : "icons/movie-lock-red-16.png",
       "128" : "icons/movie-lock-red-128.png"
@@ -11,10 +15,14 @@
       "default_title" : "TurnOffAutoPlay",
       "default_icon" : "icons/movie-lock-red-128.png"
     },
+    "background" : {
+      "scripts" : ["event.js"],
+      "persistent" : false
+    },
     "content_scripts" : [
       {
         "matches" : ["*://*.youtube.com/*"],
-        "js" : ["content.js"]
+        "js" : ["jquery.min.js", "content.js"]
       }
     ]
 }
