--- a/TurnOffAutoPlay/manifest.json
+++ b/TurnOffAutoPlay/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version" : 2,
 	"name" : "TurnOffAutoPlay",
-	"description" : "Turns Youtube autoplay off",
+	"description" : "Turns off Youtube Autoplay",
 	"version" : "1.0",
     "permissions" : [
           "*://*.youtube.com/*",
